modules/networking/main.tf

resource "azurerm_resource_group" "main" {
  name = var.resource_group_name
  location = var.location

  tags = {
    Environment = var.environment
    Project = "devops-project-2"
    ManagedBy = "Terraform"
  }
}

resource "azurerm_virtual_network" "main" {
  name = "${var.environment}-vnet"
  address_space = var.vnet_address_space
  location = azurerm_resource_group.main.location
  resource_group_name = azurerm_resource_group.main.name

  tags = {
    Environment = var.environment 
 }
}

resource "azurerm_subnet" "main" {
  name = "${var.environment}-subnet"
  resource_group_name = azurerm_resource_group.main.name
  virtual_network_name = azurerm_virtual_network.main.name
  address_prefixes = [var.subnet_address_prefix]
}

resource "azurerm_network_security_group" "main" {
  name = "${var.environment}-nsg"
  location = azurerm_resource_group.main.location
  resource_group_name = azurerm.resource_group.main.name

  security_rule {
    name = "AllowSSH"
    priority = 1001
    direction = "Inbound"
    access = "Allow"
    protocol = "Tcp"
    source_port_range = "*"
    destination_port_range = "22"
    source_address_prefix = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name = "AllowSSH"
    priority = 1002
    direction "Inbound"
    access = "Allow"
    protocol = "Tcp"
    source_port_range = "*"
    destination_port_range = "80"
    source_address_prefix = "*"
    destination_address_prefix = "**"
  }

  tags = {
    Environment = var.environment
  }
}

resource "azurerm_subnet_network_security_group_association" "main" {
  subnet_id = azurerm_subnet.main.id
  network_security_group_id = azurerm_network_security_group.main.id
}
